# minqt4go

./: demangle.go  go.mod  go.sum  goppgen.go  litffi_gen_test.go  minqt.go  minqt_quick.go  minqt_test.go  minqt_tt.go  modelbase.go  spcomp.go  utils.go
cmd/: Makefile  demangle.cpp  demangle.go  go.mod  go.sum  goppgen.go  libmanager.go  main.go  memstruct.go  protoresolve.go  trygocmdnm.go  typematchconv.go  wrappers.go
qmlcc/: CMakeLists.txt  QmlCppBridge.cpp  QmlCppBridge.h  qtuninline.cpp
qmlcc/srcc/: qtutils.h
qtallcc/: CMakeLists.txt  genqtclzsz.cpp
qtinline/: go.mod  qtinline.go
srcc/: CMakeLists.txt  callback_inherit.cpp  genmocpp.sh  mainglob.cpp  modelbase.cpp  modelbase.h  qdummyobject.cpp  qdummyobject.h  qdynslotobject.cpp  qdynslotobject.h  qdynslotobject_moc.cpp  qmitmsloter.cpp  qmitmsloter.h  qmitmsloter_moc_v3.3.8b.cxx  qmitmsloter_moc_v4.8.7.cxx  qmitmsloter_moc_v5.15.17.cxx  qmitmsloter_moc_v6.10.0.cxx  qtuninline.cpp  qtuninline.h  qtutils.h  srcc.pro
srcc/qt3compat/: QMutex  QtCore  QtGui  qt3macros.h
wgtcc/: CMakeLists.txt  qtuninline.cpp
